--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,22 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <junit.version>4.12</junit.version>
+        <junit-jupiter-engine>5.6.2</junit-jupiter-engine>
+        <maven-surefire-plugin>2.22.0</maven-surefire-plugin>
+        <hamcrest-all>1.3</hamcrest-all>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-jupiter-engine}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest-all}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -30,6 +38,11 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin}</version>
             </plugin>
         </plugins>
     </build>
